Upgrades
LibreOffice upgraded to 7.0;
Alfresco Search Service upgraded to 1.4.3